vlib/v/checker/tests/option_array_arg_err.vv
fn use_bytes(data []u8) int {
	return data.len
}

fn main() {
	use_bytes(?[]u8(none))
	maybe := ?[]u8(none)
	use_bytes(maybe)
}
